Fixed the disalignment caused by accidental deletion of place-content in dice-2 CSS class

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@
 
 .dice-2 {
   display: flex;
-  ter space-around ;
+  place-content: center space-around ;
   align-items: center;
 }
 
